--- a/portfolio-website second/index.html
+++ b/portfolio-website second/index.html
@@ -64,7 +64,7 @@
                         <img src="./images/userAsset/plus.png" alt="" />
                       </div>
                       <div class="user-image">
-                        <img src="./images/userAsset/Prac.png" alt="" />
+                        <img src="./images/userAsset/OriginalPhoto.png" alt="" />
                       </div>
                 </div>
     
