--- a/portfolio-website second/index.html
+++ b/portfolio-website second/index.html
@@ -289,7 +289,7 @@
     <footer>
       <div class="container">
         <div class="footer-wrapper">
-          <div class="footer-faded-text">John Doe</div>
+          <div class="footer-faded-text">Rohit Grover</div>
 
           <div class="link-wrapper">
             <div>
