--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <title>Portfolio Website - Rohit Grover</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div id="wrapper">
     <div class="container">
@@ -259,15 +261,15 @@
 
 
         <div class="contactus-form-container">
-          <form class="form" action="">
+          <form class="form" onsubmit="SendEmail(); reset(); return false">
             <div class="formfield-container">
-              <input class="formfield" type="text" name="name" id="" placeholder="Enter your name" />
+              <input class="formfield" type="text" name="name" id="name" placeholder="Enter your name" />
 
-              <input class="formfield" type="email" name="email" id="" placeholder="Enter your email address" />
+              <input class="formfield" type="email" name="email" id="email" placeholder="Enter your email address" />
 
-              <input class="formfield" type="text" name="subject" id="" placeholder="Enter your subject" />
+              <input class="formfield" type="text" name="subject" id="subject" placeholder="Enter your subject" />
 
-              <textarea name="message" id="" cols="30" rows="10" class="formfield formfield-textarea"
+              <textarea name="message" id="message" cols="30" rows="10" class="formfield formfield-textarea"
                 placeholder="Enter your message"></textarea>
 
             </div>
@@ -318,20 +320,15 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
-  <script>
-    var typeData = new Typed(".role", {
-      strings: [
-        "Full Stack Developer",
-        "Web Developer",
-        "UI-UX Designer",
-        "Backend Developer",
-        "Coder",
-      ],
-      loop: true,
-      typeSpeed: 100,
-      backSpeed: 80,
-      backDelay: 1000,
-    });
+  <script src="/index.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init({
+        publicKey: "-24vgXSiMSvVBmmxP",
+      });
+    })();
   </script>
 </body>
 </html>
